--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt, a4paper]{report}
+\documentclass[11pt, a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{lscape}   % Make a page in landscape format \begin{landscape}
 \usepackage{colortbl} % To color table cells
@@ -19,13 +19,15 @@
 \usepackage{wrapfig}
 \usepackage{enumerate}
 \usepackage{natbib}
+\usepackage[margin=0.9in]{geometry}
 
 \hypersetup{%
     pdfborder = {0 0 0}
 }
 
 \begin{document}
-
+	
+	\include{frontpage}
 	\include{report}
 
 \end{document}
