First finished edition

--- a/mybib.bib
+++ b/mybib.bib
@@ -13,12 +13,36 @@
  year = {2013},
  isbn = {978-1-4503-2477-9},
  location = {Berlin, Germany},
- pages = {161--172},
- numpages = {12},
  url = {http://doi.acm.org/10.1145/2508859.2516700},
  doi = {10.1145/2508859.2516700},
  acmid = {2516700},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {android, mobile security, passwords},
 }
+
+@ARTICLE{UnixPasswords,
+  title     = "Foiling the cracker: A survey of, and improvements to, password
+               security",
+  author    = "Klein, D V",
+  journal   = "Proceedings of the 2nd USENIX Security Workshop",
+  publisher = "cs.gmu.edu",
+  year      =  1990
+}
+
+@article{DeAngeli,
+ author = {De Angeli, Antonella and Coventry, Lynne and Johnson, Graham and Renaud, Karen},
+ title = {Is a Picture Really Worth a Thousand Words? Exploring the Feasibility of Graphical Authentication Systems},
+ journal = {Int. J. Hum.-Comput. Stud.},
+ issue_date = {July 2005},
+ volume = {63},
+ number = {1-2},
+ month = jul,
+ year = {2005},
+ issn = {1071-5819},
+ pages = {128--152},
+ numpages = {25},
+ url = {http://dx.doi.org/10.1016/j.ijhcs.2005.04.020},
+ doi = {10.1016/j.ijhcs.2005.04.020},
+ acmid = {1090419},
+ publisher = {Academic Press, Inc.},
+ address = {Duluth, MN, USA},
+ keywords = {security, usability, user authentication, visual memory},
+} 
