--- a/report.tex
+++ b/report.tex
@@ -1,65 +1,60 @@
 
 {\bf \Huge Research Plan} \\[0.5cm]
 
-  \section*{Research Introduction}
-
-  My research are conducted in two phases, a reseach project in the fall and master thesis in the following spring. This research plan will cover my research in my research project and my master thesis. My research project will include a litterature review as well as a reseach design. My master thesis will include data collection based on the research design from my project thesis, and a analysis of the collected data. 
+  My research are divided into two phases, a research project in the fall and master thesis in the following spring. This research plan will cover both phases.
 
   \section*{Purpose}
 
   %Describe the reason for doing the research, the topic of interest, why it is important or useful to study this, the specific research question( s) asked and the objectives set. Research without a purpose is unlikely to be good research."
 
-  In todays society we're addicted to our mobile devices in our every day life. Mobile devices are not just a communication tool for calling and texting, but also an important tool for every day tasks like doing our work, reading mail, pay our bills and keeping up with our social life. Our whole life is contained in one device. When such a small device is so imortant, it makes it vurnerable.
+  In todays society, people tends to spend a lot of time on their mobile devices. Mobile devices are not just a communication tool for calling and texting, but also an important tool for every day tasks like doing our work, reading mail, pay our bills, and keeping up with our social life. Our whole life is contained in one device. When such a small device is so important, it makes it vulnerable in terms of security.
 
-  Passwords are human-chosen secrets that are connected to you as a person. When the password are created you might create a password that are a association to something you know or recognice; passwords are more than just words and numbers. 
+  Passwords are human-chosen secrets that are connected to you as a person. When the password are created you might create a password that is a association to something you know or recognize; passwords are more than just words and numbers. Because of the shortcomings with text-based passwords \cite{UnixPasswords}, there is an increased interest in graphical passwords. The interest in graphical passwords started by the assumption that pictures are easier to remember and more secure than words and numbers \cite{DeAngeli}. Google's Android platform released the functionality for the Android Unlock Pattern in 2008, that is a security mechanism for locking the mobile phone. Since its release, there have been a lot of discussion of its security, but few researchers have done a scientific research on the Android Unlock Pattern. The problem is not just the theoretical password space, but the password space in practice. 
 
-  The interest in graphical passwords started by the assumption that pictures are easier to remember and more secure than words and numbers. Google's Android platform released the  functionality for Unlock Unlock Patterns in 2008. The Android Unlock pattern is a graphical password schemes that asks the user to make a pattern on a 3x3 grid by making a patten of connected nodes. Since its relese there have been a lot of discussion of its security, but few researchers have done a scientific reseach on the Android Unlock Pattern. The problem is not just the theoretical password space, but the password space in practice. The human brain interpret visual elements in a different way than numbers and words. An interesting observation is the bias introduced in the password making process introduced as a cause of human factors.
+  In 2013 a research group conducted the first large-scale user study on the Android Unlock Patterns \cite{Uellenbeck}. The outcome of the research was a analysis of 2900 collected Android Unlock Patterns. They found a lot of bias in the pattern making process concluding that the scheme are less secure than its theoretical security. The human brain interpret visual elements in a different way than numbers and words. An interesting observation could be found by analyzing bias introduced in the password making process introduced as a cause of human properties. 
 
-  In 2013 a research group conducted the first large-scale user study on Android Unlock Patterns \cite{Uellenbeck}. The outcome of the research was a analysis of 2900 collected Android Unlock Patterns. They found a lot of bias in the pattern making process cocluding that the schemes are less secure than its stated theoretical security. The background and demographics was not further analyzed. This reseach aims to take the analysis of people choice in graphical passwords a step further by including the human facotors that may impact the user choice in graphical passwords. The study adds to the body of knowledge with proving/disproving a theory that human factors affects users choice of graphical passwords. 
+  My research aims to take the analysis of peoples choice in Android Unlock Patterns a step further by including the human properties that may impact the user choice in graphical passwords. The study adds to the body of knowledge with proving/disproving a theory that human properties affects users choice of graphical passwords. It is also desired to look further into improvements of the scheme if the observations is finding people choice in patterns to be a security risk. 
 
   {\bf $RQ1$: What is the status of current research on graphical passwords?}
 
-  The answer to $RQ1$ will provide information to confirm my own experiences and motivations, resulting in a hypothesis that further will be proved or disaproved in the next phase of the research. 
-  The research is also concerned with how the collection of data is conducted. This is called the reseach design, and will be a part of the research project. 
+  {\bf $RQ2$: What human properties may affect our choice of graphical passwords on mobile devices?}
+
+  {\bf $RQ3$: How is users choice of patterns based on human properties affecting the security of the Android Unlock Pattern?}
+
+  {\bf $RQ3.1$: If any security risks is observed, how can the Android Unlock Pattern scheme be improved in order to reduce the security risks?} 
   
-  {\bf $RQ2$: What human properties may affect our choice of passwords?}
-
-  My own experiences and motivations aims to look at security of graphical password with focus on human aspects. It is therefore a need to analyse what kind of human factors that needs to look further into to provide correct information in the data collection. The answer to $RQ2$ will be included as a result in the research design.
-
-  {\bf $RQ3$: If there is a strong bias in users choice of graphical passwords based on human properties, is this affecting the security of the Andorid Unlock Pattern?}
-
-  If the choice of pattens based on human properties is affecting the security of the Android Unlock Pattern, this research aims to make suggestions for imrovements of the Android Unlock Patten scheme. The answer to $RQ3$ will be a result of data collection and analysis in my master thesis in the following spring. 
-
-  % Test or disaprove a theory, add to the body of knowledge. 
-
-  \section*{Process}
-  This reserch started by the the experience and motivation that graphical passwords is an interesting form of authentication supporting users to remember more complex passwords that should support higher security. There is also concucted an litterature review on graphical password that raised the hypothesis: {\it Users choice of graphical passwords are influenced by the human properties of the user}
-
-  In order to answer the hypothesis, a survey is planned along with a questionnaire for data collection. The research require a large sample of data for finding patterns in users choice of data, as well as diversity in the data in terms of nationality, age, occupation, and native language. With a questionnaire it is possible to distribute the questionnaire over the Internet. A questionnaire also provide a standarized format of the data that can be helpful in the analysis.  
-
   \section*{Products}
-  The main product of this research is to prove or disaprove a new theory in the field of security. Towards reaching this goal, there is other sub-products made during the research process. The litterature review and the research design is two products delivered in the project thesis. The product is formalized in a document. Beside the document delivered, the results from the research projects will also be presented as at password conference in December 2014. In the master thesis, a data collection and analysis is conducted. The data itself is a valuable product, alongside with the analysis it can be used to reach the main product, a new theoy. All the results will be a described in a formal report, the master thesis. 
+
+  The main product of this research is to prove or disprove a new theory in mobile security. The hypothesis states that there is a connection between users choice in graphical passwords based on human properties like physical conditions and demographics. Towards reaching this goal, there is other sub-products made during the research process. The literature review and the research design is two sub-products delivered in the project thesis. In my master thesis, a data collection and analysis is conducted. The data itself is a valuable product, alongside with the analysis, it can be used to prove or disprove a new theory.
+
+  Research on passwords is not easy to conduct because of the nature of passwords. Passwords should remain a secret for the user, and as we have learned, we should not share our password due to security concerns. Research on text-based passwords is often based on leaked password on the web. When analyzing Android Unlock Patterns, there is no such data source available. This research design can provide insight into a new way of solving the problem of collecting user chosen passwords from mobile devices. The research design provides a detailed description of the strategy chosen to collect Android Unlock Patterns from users through a questionnaire over the Internet. This can provide knowledge for future research on graphical passwords on mobile devices. 
+  
+  \section*{Process}
+
+  \begin{wrapfigure}{l}{0.53\textwidth}
+     \vspace{-20pt}
+     \begin{center}
+        \includegraphics[scale=0.13]{ResearchProcess.png}
+     \end{center}
+     \vspace{-5pt}
+   \end{wrapfigure}
+
+  This research started by the the experience and motivation that graphical passwords is an interesting form of authentication, supporting users to remember more complex passwords that should provide better security. To find the research questions, I started with a literature review, providing a conceptual framework for the thesis. From the literature review, there was found that there is a lack of research on human choices of graphical passwords based on human properties. Beside the literature review, the research projects also includes a research design for my master thesis. In order to find out if there is possible to see a pattern between users choice in passwords and human properties, a survey is planned along with a questionnaire for the data collection. The research require a large sample of data for finding patterns in users choice of Android Unlock Patterns, as well as diversity in the data in terms of demographics. With a questionnaire it is possible to distribute the questionnaire over the Internet. A questionnaire also provide a standardized format of the data that can be helpful in the analysis. The selected research strategy and data generation method will provide quantitative data for the analysis.
 
   \section*{Participants}
 
-  \begin{table}[H]
-  \begin{tabular}{| p{5cm} | p{11cm} |}
-    \hline
-    {\bf Participant(s)} & {\bf Description} \\ \hline
-    Marte Løge - Researcher & Me, the researcher, is writing and conduction the research. \\ \hline
-    Lillian Røstad - Supervisor & Lillian is my supervisor for both the research project as well as the master thesis. \\ \hline
-    Per Thorsheim - Co-supervisor & Per Thorsheim have interest in this particular reseach, as well as password as a field of study. He have the role of as a co-supervisor and is an external participant outside the academic field. He is providing his knowledge about passwords as well as providing a network of contact within security. He have the rights to the results. \\ \hline
-    Users - The respondents & In this research there is not a narrow target group, but a wide target population. The aim is to collect data world wide were everyone with a mobile phone that finishing the questionnaire is participant, e.g. respondent. \\ \hline
-  \end{tabular}
-  \end{table}
+  As a researcher, I am also included as a participant. My work is to plan and conduct the research. 
+
+  The research is supervised by Lillian Røstad and Per Thorsheim. Lillian is my main supervisor and is contributing with her experience with research in computer science and security. Per has the role as my co-supervisor and is an external participant outside the academic field. He is contributing in this research because of his personal interest in passwords and security, as well as providing a network of contacts within the field of information security. Both have the right to the results form this research.
+
+  In this research, there is not a narrow target population. The aim is to collect data world wide were everyone with a mobile phone is considered as the target population. All the volunteered respondents are considered as participants in this research. Myself, as a researcher, have no personal contact with the respondents, but need to carefully handle the information from the respondents according to a legal and ethical perspective. It should not be able to track the information back to the respondents. All the data from the respondents are kept anonymous and will not be used outside of this research. Information concerning legal and ethical aspects of this research should be described in the questionnaire. 
 
   \section*{Paradigm}
-  With a survey as the a chosen research strategy, this research seek to find patterns that is assued to exisit. This is a way of thinking is closely related to the positivism paradigm. This research is based on empirical tesing of a hypothesis, with a desire to confirm or refuse the assumtions made in the hypothesis.
-  When concuction the research, my beliefs as a researcher are independent of my research and my research can be stated to be objective. It is conducted with minimal interaction with the participants and the research is based on facts, that is the the quantitative data collected. 
+  With a survey as the a chosen research strategy, this research seek to find patterns that is assumed to exist. This is a way of thinking is closely related to the positivism paradigm. This research is based on empirical testing of a hypothesis, with a desire to confirm or refuse the assumptions made in the hypothesis.
+  When conducting the research, my beliefs as a researcher are independent of my research and my research can be stated to be objective. It is conducted with minimal interaction with the participants and the research is based on facts, that is the the quantitative data collected. 
 
   \section*{Presentation}
-
-    The presentation of the result from this research will be presentend in two deliverable documents, one project thesis and one marster thesis. The reseach will also be presented at the conference ``Passwords14''\cite{passwords} in December. 
+  The presentation of the result from this research will be presented in two deliverable documents, project thesis and master thesis. The research will also be presented at the conference ``Passwords14''\cite{passwords} in December. The presentation will provide insightful feedback from researcher, as well as providing knowledge about the gap in the research that need to be filled. 
 
 
 
