Odd fixed spelling errors

--- a/mybib.bib
+++ b/mybib.bib
@@ -46,3 +46,11 @@
  address = {Duluth, MN, USA},
  keywords = {security, usability, user authentication, visual memory},
 } 
+
+% Optional fields: volume/number, series, address, edition, month, note
+@BOOK{empiriske,
+  author = {Briony J Oates},
+  title = {Researching Information Systems and Computing},
+  publisher = {SAGE Publications},
+  year = {2006}
+}
